CP:0 Added possible moves for Bishop/Queen and Knight | Fixed taking same color piece bug